# visionary-lab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  LICENSE  README.md  docker-compose.yml  package-lock.json  project-structure.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: azure-dev.yaml  backend_docker_build.yaml  frontend_docker_build.yaml
backend/: .dockerignore  .env.example  BACKEND.MD  Dockerfile  main.py
backend/core/: __init__.py  analyze.py  azure_storage.py  config.py  cosmos_client.py  gpt_image.py  instructions.py  sora.py  storage.py  test.py
backend/models/: __init__.py  common.py  gallery.py  images.py  metadata_models.py  videos.py
docker/: backend.dockerfile  frontend.dockerfile
frontend/: .dockerignore  .env.example  .env.local  Dockerfile  FRONTEND.MD  auth.ts  components.json  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/components/: AuthStatus.tsx  ImageCreationContainer.tsx  ImageDetailView.tsx  ImageOverlay.tsx  ImageUploader.tsx  MasonryComparison.tsx  MasonryGrid.tsx  OptimizedImage.tsx  OptimizedVideo.tsx  RowBasedMasonryGrid.tsx  VideoCard.tsx  VideoCreationContainer.tsx  VideoDetailView.tsx  VideoOverlay.tsx  animated-layout.tsx  app-sidebar.tsx  image-analyzer.tsx  image-gallery-card.tsx  login-form.tsx  multi-select-action-bar.tsx  (+5 more)
infra/: main.bicep  main.parameters.json
notebooks/: Instructions.py  VideoTools.py  sora-api-starter.ipynb  utils.py
(+77 files in other folders)
